added email field to db and sending emal for registration
